# text2interaction

./: .gitmodules  LICENSE  README.md
fm-planning/: README.md  environment.yml  pyproject.toml
fm-planning/fm_planning/: __init__.py
fm-planning/fm_planning/models/pretrained/: __init__.py  base.py  utils.py
fm-planning/fm_planning/models/pretrained/generative/: __init__.py  llama_gen.py  openai_gen.py
fm-planning/fm_planning/prompts/: __init__.py
fm-planning/fm_planning/prompts/text2interaction/: __init__.py
fm-planning/fm_planning/prompts/text2interaction/real_world/: __init__.py  example_1.py  example_2.py  example_3.py  system_prompt.py
fm-planning/fm_planning/prompts/text2interaction/simulation/: __init__.py
fm-planning/fm_planning/prompts/text2interaction/simulation/object_rearrangement/: __init__.py  example_0.py  example_1.py  example_10.py  example_11.py  example_12.py  example_13.py  example_14.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  example_9.py  system_prompt.py
fm-planning/fm_planning/utils/: nest.py  tensors.py
fm-planning/scripts/eval/: __init__.py  ablation_preference_fn.py  cross_eval_ablation.py  eval_preference_fn.py
readme/: README.md
