[tool.poetry]
name = "fm-planning"
version = "1.0.0"
description = "Planning with Foundation Models (FMs): Language Models and Vision-Language Models"
authors = ["agiachris <christopheragia@gmail.com>", "JakobThumm <jakob.thumm@tum.de>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
torch = "^2.2.0"
matplotlib = "^3.8.2"
torchvision = "^0.17.0"
hydra-core = "^1.3.2"
openai = "^1.12.0"
black = "^24.2.0"
mypy = "^1.8.0"
pyyaml = "^6.0.1"
transformers = "^4.37.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
